# slm-selective-grounding

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
artifacts/: phase1_gen_asqa_sample100.jsonl  phase1_gen_sample100.jsonl  phase2_claims_asqa_sample100.jsonl  phase3_answer_metrics_sample100.jsonl  phase3_claim_context_pairs_sample100.jsonl  phase3_claim_scores_sample100.jsonl  phase4_claim_context_pairs_refusal_sample100.jsonl  phase4_claim_scores_refusal_sample100.jsonl  phase4_claims_refusal_sample100.jsonl  phase4_deltas_refusal_vs_base_sample100.jsonl  phase4_gen_refusal_sample100.jsonl  phase4_worse_cases_sample100.jsonl  phase5_claim_context_pairs_sample100.jsonl  phase5_claim_scores_sample100.jsonl  phase5_claims_grounded_sample100.jsonl  phase5_deltas_grounded_vs_base_sample100.jsonl  phase5_grounded_answers_sample100.jsonl
configs/: datasets.yaml  default.yaml  dpo.yaml  eval.yaml  mixtures.yaml  retriever.yaml
notebooks/: colab_sample100.ipynb
results/: phase3_claim_scores_sample100.jsonl  phase4_claim_scores_refusal_sample100.jsonl  phase5_claim_scores_sample100.jsonl  report_sample100.jsonl
scripts/: 00_download_datasets.py  01_build_corpus.py  01b_build_qa_samples.py  02_build_retriever_indexes.py  02b_extract_claims.py  03_build_external_corpus.py  03_make_mixtures.py  03b_build_corpus_sqlite.py  04_generate_baseline_outputs.py  04_mix_contexts.py  05_make_preference_pairs.py  06_train_dpo.py  07_eval.py  10_run_phases.py  99_smoke_wiki_pipeline.py
tests/: conftest.py  test_bm25_index.py  (+8 more)
(+36 files in other folders)
